--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -r -f build && npm install && react-scripts build && rm -r -f ../server/public/build && cp -r build ../server/public/build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
