--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,11 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.18",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "underscore": "^1.12.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
